feat(api): expose devil fruit subcategories
